fixed spacing in trainer flickity.

--- a/themes/kin-athletics/sass/_archive-about.scss
+++ b/themes/kin-athletics/sass/_archive-about.scss
@@ -54,9 +54,10 @@ body.page-template-archive-trainer {
       display: flex;
       flex-flow: row wrap;
       height: 75%;
+      justify-content: center;
 
       .trainer-item-container {
-        width: 49%;
+        width: 40%;
         max-height: 200px;
 
         .trainer-thumbnail-wrapper {
@@ -66,7 +67,6 @@ body.page-template-archive-trainer {
           overflow: hidden;
           border: 2px solid #a10000;
           border-radius: 50%;
-          width: 90%;
           margin: auto;
           height: 75%;
           background: #C6CDDF;
